# heartbench-project

./: .gitignore  01_EXPERIMENT_BLUEPRINT.md  02_PROMPT_SHEET.md  LICENSE  README.md  pyproject.toml  requirements.txt
benchmark/: construction_notes.md  heartbench_dev_swapped.jsonl  heartbench_test.jsonl  heartbench_test_swapped.jsonl  heartbench_v2_120.jsonl  heartbench_v2_dev.jsonl  heartbench_v2_test.jsonl  moral_stories_dev.jsonl  moral_stories_subset.csv  moral_stories_subset.jsonl  moral_stories_subset_swapped.jsonl  moral_stories_subset_traced.jsonl  moral_stories_supported.jsonl  moral_stories_supported_traced.jsonl  moral_stories_test.jsonl  moral_stories_test_swapped.jsonl
configs/: experiment_casewise.yaml  experiment_casewise_logit.yaml  experiment_dual_logit_v2.yaml  experiment_staged_paper.yaml  explanation_lexicons.yaml  models.yaml  prompts_casewise.yaml  prompts_casewise_logit.yaml  prompts_dual_logit_v2.yaml  prompts_staged_paper.yaml
materials/: README.md
notebooks/: exploratory_analysis.ipynb
paper/: README.md  heartbench_project_summary.md
prompts/: casewise_christian_heart_focused.txt  casewise_logit_baseline.txt  casewise_logit_christian_heart_focused.txt  casewise_logit_neutral_heart_sensitive.txt  casewise_logit_scripture_style.txt  casewise_logit_secular_matched.txt  casewise_neutral_heart_sensitive.txt  casewise_secular_matched.txt  dual_logit_v2_christian_scaffold.txt  dual_logit_v2_scripture_scaffold.txt  dual_logit_v2_secular_scaffold.txt  staged_explanation_with_post_frame.txt  staged_frame_christian_v3.txt  staged_j1_baseline.txt  (+3 more)
(+289 files in other folders)
